--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               </div>
             </div>
             <a
-              href="Shakti resume.pdf"
+              href="#"
               class="button"
               >Download Resume</a
             >
